supabase-storage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-storage
  labels:
    workload: supabase-storage
  namespace: supabase
spec:
  replicas: 1
  selector:
    matchLabels:
      workload: supabase-storage
  template:
    metadata:
      labels:
        workload: supabase-storage
    spec:
      restartPolicy: Always
      serviceAccountName: supabase-storage
      securityContext: {}
      containers:
      - name: supabase-storage
        securityContext: {}
        image: supabase/storage-api:v0.28.2
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/storage
          name: storage-data
      volumes:
      - name: storage-data
        hostPath:
          path: /storage/dev-research-supabase/supabase-storage/data
