supabase-storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supabase-storage
  labels:
    workload: supabase-storage
  namespace: supabase
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    workload: supabase-storage
